--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
 	<title>칸이킨츠기kit</title>
+	<meta name="description" content="2020-2 서울과기대 과제전 작품으로 도자기를 간단하게 수리할 수 있는 칸이 킨츠기 키트 판매 상세페이지입니다.">
+	
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://lucidpark.github.io/uxclass/testland/main/">
+	<meta property="og:image" content="thumbnail.png">
+	<meta property="og:title" content="칸이킨츠기">
+	<meta property="og:description" content="2020-2 서울과기대 과제전 작품으로 도자기를 간단하게 수리할 수 있는 칸이 킨츠기 키트 판매 상세페이지입니다.">
+
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
 	<style type="text/css">
 		body,li,ul{margin: 0;padding: 0;}
