--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://up-ub.github.io/20-11-16/">
-	<meta property="og:image" content="thumbnail.png">
+	<meta property="og:image" content="thumbnail.jpg">
 	<meta property="og:title" content="칸이킨츠기">
 	<meta property="og:description" content="2020-2 서울과기대 과제전 작품으로 도자기를 간단하게 수리할 수 있는 칸이 킨츠기 키트 판매 상세페이지입니다.">
 
